<pre>
2008-06-xx:
    * version 1.2
    * don't pass any ctrl- or alt- prefixed keys to firefox in insert mode
    * keywords in :open <arg> have higher priority than local files now

2008-06-03:
    * version 1.1
    * IMPORTANT: security update for suggest engines
    * try to add .exe automatically to filenames on windows, so :set editor=gvim -f
      will automatically invoke gvim.exe (if it's in the path). Thanks to
      Guido Van Hoecke
    * readded visualbellstyle (thanks mauke)
    * new popups=4 option
    * many bug fixes as usual

2008-05-14:
    * version 1.0
    * THIS VERSION ONLY WORKS WITH FIREFOX 3.0 beta3 or newer
    * IMPORTANT: Major hints rewrite
      read up the new help for the f, F and ; commands for details
      removed the following hint options: 'hintchars' 'maxhints'
      added the following hint options: 'hinttimeout', 'hintmatching', 'wordseperators'
    * IMPORTANT: changed 'I' key to Ctrl-Q to also work in textboxes
    * IMPORTANT: :bmarks! and :history! open the matching items now in a tab, instead
      of bringing up the bookmarks/history window
    * IMPORTANT: "B" mapping now works just like :buffers, old bufferwindow will be removed
      at some time. Use B5gt to jump to the 5th tab.
    * also go to INSERT mode for HTMLSelectElements, so you can type text to go to element
      in drop down boxes
    * new "S" flag for "complete" to list google suggestions in :open vimp and
      pressing tab (disabled by default). Also added new 'suggestengines' option.
    * gi accepts now a count to jump to the nth input field
    * ctrl-t on input fields starts a very basic vi-mode
    * :play for playing a recorded macro
    * :[del]macros [regex] for listing/deleting recorded macros
    * :set! now lets you change about:config prefs similar to :set
    * new :command to add user defined commands
    * new setCustomMode for plugin writers
    * :au[tocmd] executes commands on events (only 'PageLoad' actually) on websites